codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model
  Choose a model from any connected provider.

  1. gpt-5.5 (default)  ChatGPT (OpenAI) · Frontier model for complex coding,
                        research, and real-world work.
  2. gpt-5.4            ChatGPT (OpenAI) · Strong model for everyday coding.
  3. gpt-5.4-mini       ChatGPT (OpenAI) · Small, fast, and cost-efficient
                        model for simpler coding tasks.
  4. gpt-5.3-codex      ChatGPT (OpenAI) · Coding-optimized model.
› 5. gpt-5.2 (current)  ChatGPT (OpenAI) · Optimized for professional work and
                        long-running agents.

  Press enter to confirm or esc to go back
